--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>codekristapsx</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+<div class="header">
+    <h1>codekristapsx</h1>
+    <h2>under construction</h2>
+</div>
+
+<div class="main">
+    <div class="about"></div>
+    <div class="experience"></div>
+    <div class="portfolio"></div>
+    <a href="">GitHub</a> profile
+</div>
+
+
+<script src="app.js"></script>
 </body>
+
 </html>
