--- a/index.html
+++ b/index.html
@@ -10,18 +10,30 @@
 
 <body>
 
-<div class="header">
-    <h1>codekristapsx</h1>
-    <h2>under construction</h2>
-</div>
+<div class="container">
+    <div class="header">
+        <h1>codekristapsx</h1>
+    </div>
 
-<div class="main">
-    <div class="about"></div>
-    <div class="experience"></div>
-    <div class="portfolio"></div>
-    <a href="">GitHub</a> profile
-</div>
+    <div class="main">
+        <h2>under construction</h2>
+        <div class="about">
+            <h2>about</h2>
+            <p>---</p>
+        </div>
+        <div class="experience">
+            <h2>experience</h2>
+            <p>---</p>
+        </div>
+        <div class="portfolio">
+            <h2>portfolio</h2>
+            <p>---</p>
+        </div>
+        <button class="green_button">GitHub</button>
+    </div>
 
+    <div class="footer"></div>
+</div>
 
 <script src="app.js"></script>
 </body>
