--- a/index.html
+++ b/index.html
@@ -9,31 +9,29 @@
 </head>
 
 <body>
-
 <div class="container">
-    <div class="header">
+<div class="header">
         <h1>codekristapsx</h1>
     </div>
 
     <div class="main">
-        <h2>under construction</h2>
-        <div class="about">
+        <div class="about section">
             <h2>about</h2>
-            <p>---</p>
         </div>
-        <div class="experience">
+        <div class="experience section">
             <h2>experience</h2>
-            <p>---</p>
         </div>
-        <div class="portfolio">
+        <div class="portfolio section">
             <h2>portfolio</h2>
-            <p>---</p>
         </div>
-        <button class="green_button">GitHub</button>
+        
     </div>
 
-    <div class="footer"></div>
+    <div class="footer">
+        <button class="green_button">GitHub</button>
+    </div>
 </div>
+    
 
 <script src="app.js"></script>
 </body>
