--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>codekristapsx</h1>
+        <h1>codekristapsx</h1><h1 class="terminal">_</h1>
     </div>
 
     <div class="main">
