--- a/index.html
+++ b/index.html
@@ -9,49 +9,51 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="header">
-        <h1>codekristapsx</h1><h1 class="terminal">_</h1>
-    </div>
-
-    <div class="main">
-        <div class="about section">
-            <h1 class="section_title">about</h1>
-            <p>As a self-taught IT professional, I am a goal-oriented and
-                self-motivated individual with a passion for technology and learning. I am always eager to expand my
-                knowledge and take on new opportunities in the field.</p>
-        </div>
-        <div class="experience section">
-            <h1 class="section_title">experience</h1>
-
-            <h3>IAM System Engineer - 09/2024 - current</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda autem doloribus, fuga incidunt
-                nulla odit porro qui veniam? Commodi doloribus ea eum nihil perspiciatis quae rem sequi sunt
-                veritatis.</p>
-
-            <h3>IAM Monitoring Engineer - 06/2021 - 09/2024</h3>
-            <p>Managing third-party agent-based monitoring solutions, supporting monitoring business processes,
-                developing and maintaining automations in Azure and Azure DevOps, and overseeing the maintenance of SAST
-                and SCA security tools.</p>
-
-            <h3>Application Support Expert - 07/2020 - 06/2021</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda autem doloribus, fuga incidunt
-                nulla odit porro qui veniam? Commodi doloribus ea eum nihil perspiciatis quae rem sequi sunt
-                veritatis.</p>
-        </div>
-        <div class="portfolio section">
-            <h1 class="section_title">portfolio</h1>
+    <div class="container">
+        <div class="header">
+            <h1>codekristapsx</h1>
+            <h1 class="terminal">_</h1>
         </div>
 
+        <div class="main">
+            <div class="about section">
+                <h1 class="section_title">about</h1>
+                <p>As a self-taught IT professional, I am a goal-oriented and
+                    self-motivated individual with a passion for technology and learning. I am always eager to expand my
+                    knowledge and take on new opportunities in the field.</p>
+            </div>
+            <div class="experience section">
+                <h1 class="section_title">experience</h1>
+
+                <h3>IAM System Engineer - 09/2024 - current</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda autem doloribus, fuga incidunt
+                    nulla odit porro qui veniam? Commodi doloribus ea eum nihil perspiciatis quae rem sequi sunt
+                    veritatis.</p>
+
+                <h3>IAM Monitoring Engineer - 06/2021 - 09/2024</h3>
+                <p>Managing third-party agent-based monitoring solutions, supporting monitoring business processes,
+                    developing and maintaining automations in Azure and Azure DevOps, and overseeing the maintenance of
+                    SAST
+                    and SCA security tools.</p>
+
+                <h3>Application Support Expert - 07/2020 - 06/2021</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda autem doloribus, fuga incidunt
+                    nulla odit porro qui veniam? Commodi doloribus ea eum nihil perspiciatis quae rem sequi sunt
+                    veritatis.</p>
+            </div>
+            <div class="portfolio section">
+                <h1 class="section_title">portfolio</h1>
+            </div>
+
+        </div>
+
+        <div class="footer">
+            <button class="green_button">GitHub</button>
+        </div>
     </div>
 
-    <div class="footer">
-        <button class="green_button">GitHub</button>
-    </div>
-</div>
 
-
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
